--- a/index.html
+++ b/index.html
@@ -4,9 +4,101 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Food Portfolio</title>
 </head>
 <body>
-    
+        <header>
+            <nav class="navBar">
+                <ul>
+                    <li><a id="home-menu" href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Recipies</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Reviews</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section class="home">
+                <div class="half-side written-part">
+                    <h1><span>Skip</span> The Diet,  Just Eat Healthy  With Food Network</h1>
+                    <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+                    <a href="#" class="btn">Order Food</a>
+                </div>
+                <div class="half-side">
+                    <img src="images/Group 8425.png" alt="#">
+                </div>
+           </section>
+
+
+
+            <section class="about">
+                <div class="half-side">
+                    <img src="images/Person Image.png" alt="#">
+                </div>
+                <div class="half-side written-part">
+                    <h2>About Me</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque, cum officia. Pariatur repellendus ipsum consequatur veniam, corporis officia, libero, quis laudantium vero aut cupiditate nulla inventore in voluptatibus. A sit iste assumenda optio velit obcaecati ab eos autem possimus mollitia illum totam odit, nesciunt quod? Voluptates velit in consectetur magni!</p>
+                    <a href="https://www.facebook.com/" target="blank" id="download-cv" class="btn">Contact Me</a>
+                </div>
+           </section>
+            </section>
+
+
+            <section class="recipies">
+                <div class="recipies-intro">
+                    <h2>My Recipies</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, doloremque. Reiciendis tenetur accusantium commodi laborum quibusdam voluptatem unde molestias quasi.
+                    </p>
+                </div>
+            </section>
+            <section class="recipies-details">
+                <div class="one-thirdArea border-shadow">
+                    <img src="images/Project Cover.jpg" alt="blanck">
+                    <h3>Recipies Details</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium asperiores expedita sunt, aspernatur officiis rerum!
+                    </p>
+                </div>
+                <div class="one-thirdArea border-shadow">
+                    <img src="images/Project Cover1.jpg" alt="blanck">
+                    <h3>Recipies Details</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium asperiores expedita sunt, aspernatur officiis rerum!
+                    </p>
+                </div>
+                <div class="one-thirdArea border-shadow">
+                    <img src="images/Project Cover.png" alt="blanck">
+                    <h3>Recipies Details</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium asperiores expedita sunt, aspernatur officiis rerum!
+                    </p>
+                </div>
+            </section>
+
+            <section class="social-media">
+                <div >
+                    <h1>700k</h1>
+                    <p>Youtube Subscribers</p>
+                </div>
+                <div>
+                    <h1>2.4m</h1>
+                    <p>instagram Followers</p>
+                </div>
+                <div>
+                    <h1>100k</h1>
+                    <p>Dribbble Shot Likes</p>
+                </div>
+            </section>
+            <section class="network">
+                <div > 
+                    <h1><span>Food</span> Network</h1>
+                    <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+                </div>
+        </section>
+        </main>
+       
 </body>
 </html>
